--- a/src/main/webapp/app/pages/pagesong/pages.component.html
+++ b/src/main/webapp/app/pages/pagesong/pages.component.html
@@ -1,88 +1,92 @@
 <div>
-    <div class="banner-parallax">
-        <img src="http://www.popupstore.com.br/arquivos/about-us-title.png" alt="">
-        <div class="row col-md-12">
-            <script src="https://fast.wistia.com/embed/medias/lxbcmejy1c.jsonp" async="true"></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async="true"></script><div class="wistia_responsive_padding" style="padding:56.0% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_lxbcmejy1c volume=0 videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div></div>
-    </div>
     <div class="container">
-        <h1 class="my-4">
-            <small> Sound Store Music</small>
-        </h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
-
+        <p></p>
+        <div class="banner-parallax2">
+            <img src="http://www.popupstore.com.br/arquivos/about-us-title.png" alt="">
+            <!--<p>ABOUT US</p>-->
+            <div class="row col-md-12" style="height: 130px">
+                <script src="https://fast.wistia.com/embed/medias/lxbcmejy1c.jsonp" async="true"></script>
+                <script src="https://fast.wistia.com/assets/external/E-v1.js" async="true"></script>
+                <div class="wistia_responsive_padding" style="padding:56.0% 0 0 0;position:relative;">
+                    <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                        <div class="wistia_embed wistia_async_lxbcmejy1c volume=0 videoFoam=true" style="height:100%;width:100%">&nbsp;</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: -7%!important;">
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
                 <div class="pic"></div><br>
                 <p style="margin-top:71px!important;">
                 <h3><b>Julio</b><br>
                     <small>Backend Developer</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p></p>
                 </p>
                 <div class="social1">
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                </div>
-                <div class="social3">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
+                <div class="social3">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </div>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: -7%!important;">
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
                 <div class="pic"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Llauna</b><br>
                     <small>Frontend Developer</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p></p>
                 </p>
                 <div class="social1">
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                </div>
-                <div class="social3">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
+                <div class="social3">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </div>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: -7%!important;">
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
                 <div class="pic"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Borja</b><br>
                     <small>Job Title</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p></p>
                 </p>
                 <div class="social1">
-                    <i class="fa fa-github" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
                 <div class="social3">
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
             </div>
 
         </div>
         <div class="row" id="r">
-            <div class="col-lg-2 col-sm-3 text-center mb-2" style="margin-top: -7%!important;">
+            <div class="col-lg-2 col-sm-3 text-center mb-2">
             </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: 2%!important;">
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
                 <div class="pic"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Bryan</b><br>
                     <small>Job Title</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p></p>
                 </p>
                 <div class="social1">
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                </div>
-                <div class="social3">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
+                <div class="social3">
+                    <i class="fa fa-github" aria-hidden="true"></i>
+                </div>
             </div>
-            <div class="col-lg-4 col-sm-6 text-center mb-4" style="margin-top: 2%!important;">
+            <div class="col-lg-4 col-sm-6 text-center mb-4">
                 <div class="pic"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Javier</b><br>
                     <small>Frontend Developer</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p></p>
                 </p>
                 <div class="social1" onclick="location.href='https://www.github.com/ironkk'">
                     <i class="fa fa-github" aria-hidden="true"></i>
@@ -91,7 +95,7 @@
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="col-lg-2 col-sm-3 text-center mb-2" style="margin-top: 2%!important;">
+            <div class="col-lg-2 col-sm-3 text-center mb-2">
             </div>
         </div>
     </div>
