Ajuste about us (Julio, Borja, Bryan & LLauna)

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<li id="fh5co-page" [ngSwitch]="isAuthenticated()">
+<div id="fh5co-page" [ngSwitch]="isAuthenticated()">
     <aside id="fh5co-aside">
         <h1 id="fh5co-logo">
             <a routerLink="/">
