--- a/src/main/webapp/app/pages/pagesong/pages.component.html
+++ b/src/main/webapp/app/pages/pagesong/pages.component.html
@@ -1,37 +1,38 @@
 <div>
-    <div class="container">
-        <p></p>
-        <div class="banner-parallax2">
-            <img src="http://www.popupstore.com.br/arquivos/about-us-title.png" alt="">
-            <!--<p>ABOUT US</p>-->
-            <div class="row col-md-12" style="height: 130px">
-                <script src="https://fast.wistia.com/embed/medias/lxbcmejy1c.jsonp" async="true"></script>
-                <script src="https://fast.wistia.com/assets/external/E-v1.js" async="true"></script>
-                <div class="wistia_responsive_padding" style="padding:56.0% 0 0 0;position:relative;">
-                    <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
-                        <div class="wistia_embed wistia_async_lxbcmejy1c volume=0 videoFoam=true" style="height:100%;width:100%">&nbsp;</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="banner-parallax2">
+                <div class="row col-md-12">
+                    <img src="http://www.popupstore.com.br/arquivos/about-us-title.png" alt="">
+                    <script src="https://fast.wistia.com/embed/medias/lxbcmejy1c.jsonp" ></script>
+                    <script src="https://fast.wistia.com/assets/external/E-v1.js"></script>
+                    <div class="wistia_responsive_padding" style="padding:56.0% 0 0 0;position:relative;">
+                        <div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+                            <div class="wistia_embed wistia_async_lxbcmejy1c volume=0 videoFoam=true" style="height:100%;width:100%">&nbsp;</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container">
         <div class="row">
             <div class="col-lg-4 col-sm-6 text-center mb-4">
-                <div class="pic"></div><br>
-                <p style="margin-top:71px!important;">
-                <h3><b>Julio</b><br>
-                    <small>Backend Developer</small>
-                </h3>
-                <p></p>
-                </p>
-                <div class="social1">
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <div class="pic pic1"></div><br>
+                    <p style="margin-top:71px!important;">
+                        <h3><b>Julio</b><br>
+                            <small>Backend Developer</small>
+                        </h3>
+                    </p>
+                    <div class="social1">
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </div>
+                    <div class="social3">
+                        <i class="fa fa-github" aria-hidden="true"></i>
+                    </div>
                 </div>
-                <div class="social3">
-                    <i class="fa fa-github" aria-hidden="true"></i>
-                </div>
-            </div>
             <div class="col-lg-4 col-sm-6 text-center mb-4">
-                <div class="pic"></div>
+                <div class="pic pic2"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Llauna</b><br>
                     <small>Frontend Developer</small>
@@ -46,7 +47,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 text-center mb-4">
-                <div class="pic"></div>
+                <div class="pic pic3"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Borja</b><br>
                     <small>Job Title</small>
@@ -66,7 +67,7 @@
             <div class="col-lg-2 col-sm-3 text-center mb-2">
             </div>
             <div class="col-lg-4 col-sm-6 text-center mb-4">
-                <div class="pic"></div>
+                <div class="pic pic4"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Bryan</b><br>
                     <small>Job Title</small>
@@ -81,7 +82,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 text-center mb-4">
-                <div class="pic"></div>
+                <div class="pic pic5"></div>
                 <p style="margin-top:95px!important;">
                 <h3><b>Javier</b><br>
                     <small>Frontend Developer</small>
@@ -89,10 +90,10 @@
                 <p></p>
                 </p>
                 <div class="social1" onclick="location.href='https://www.github.com/ironkk'">
-                    <i class="fa fa-github" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
                 <div class="social3" onclick="location.href='https://www.linkedin.com/in/javier-manzano-varo-21536811a/'">
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
             </div>
             <div class="col-lg-2 col-sm-3 text-center mb-2">
