--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <aside id="fh5co-aside">
         <h1 id="fh5co-logo">
             <a routerLink="/">
-                <img src="../../../content/images/logo.png" height="100%" width="100%"/>
+                <img src="../../../content/images/logo-2.png" height="100%" width="100%"/>
             </a>
         </h1>
 
@@ -24,7 +24,7 @@
                     <label class="form-check-label" for="rememberMe">
                         <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe"
                                [(ngModel)]="rememberMe" checked>
-                        <span> Remember me</span>
+                        <span>  Remember me</span>
                     </label>
                 </div>
                 <button type="submit" class="btn btn-primary">Sign in</button>
