--- a/src/main/webapp/app/pages/pageregister/pages.component.html
+++ b/src/main/webapp/app/pages/pageregister/pages.component.html
@@ -7,7 +7,7 @@
                     <br><br>
                     <div class="input-group stylish-input-group">
                         <input type="text" id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search"
-                               placeholder="Buscar artista o canción">
+                               placeholder="Buscar por artista o canción">
                         <span class="input-group-addon">
                             <a (click)="searchSong()">
                                 <span class="fa fa-search"></span>
