--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -1365,8 +1365,6 @@ a{
     text-transform: uppercase;
     color: #228896;
 }
-a:hover {
-    color: #228896;
-    outline: none;
-    text-decoration: none !important;
+a:active::before{
+    background-color: #0217a3;
 }
