--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,7 +1,9 @@
+
 <div>
-    <div class="video">
-        <div class="embed-responsive embed-responsive-4by3"    style="margin-top: -5%;left: 17%;width: 83%;height: 100%;">
-            <iframe class="embed-responsive-item" src="https://s3-eu-west-1.amazonaws.com/imagespgs/video.mp4" autoplay loop style="width:100%;"></iframe>
-        </div>
+    <div></div>
+    <div>
+        <video src="https://s3-eu-west-1.amazonaws.com/imagespgs/SoundStoreMusic.mp4" width="80%" height="100%" autoplay loop type="video/mp4" ></video>
     </div>
 </div>
+
+
