--- a/src/main/webapp/app/account/register/register.css
+++ b/src/main/webapp/app/account/register/register.css
@@ -1,6 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Titan+One);
+/*@import url(https://fonts.googleapis.com/css?family=Titan+One);
 @import url(http://weloveiconfonts.com/api/?family=fontawesome);
-@import url(https://meyerweb.com/eric/tools/css/reset/reset.css);
+@import url(https://meyerweb.com/eric/tools/css/reset/reset.css);*/
 
 .boton2{
     color:white!important;
@@ -26,13 +26,15 @@ label{
     border-radius: 5px!important;
     height: 35px!important;
     color:black!important;
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: Oswald, sans-serif;
     font-style: italic!important;
     font-size: 14px!important;
 }
+/*
 #fondos{
     margin-left: 70px!important;
 }
+*/
 h1{
     color:white!important;
     margin-left: 28%!important;
@@ -41,7 +43,7 @@ h1{
 
 @media (min-width: 768px){
           .col-md-4 {
-margin-left: -29%!important;
+            margin-left: -29%!important;
           }
 }
 
@@ -92,9 +94,6 @@ button:hover{
     }
 }
 
-
-
-
 body {
     background: #1b1e24;
     background-image:-webkit-linear-gradient(right,#1b1e24,#1b1e24 50%,#1b1e24);
@@ -103,13 +102,13 @@ body {
     background-image:-ms-linear-gradient(right,#1b1e24,#1b1e24 50%,#1b1e24);
     background-image:linear-gradient(to left,#1b1e24,#1b1e24 50%,#1b1e24);
     text-align: center;
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: Oswald, sans-serif;
     font-size: 14px;
     line-height: 1.5em;
 }
 
 [class*="fontawesome-"]:before {
-    font-family: IBM Plex Sans, sans-serif;
+    font-family: Oswald, sans-serif;
 }
 
 input {
